After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598272 - a52dec leaks input buffers
a52dec leaks input buffers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other Linux
: Normal blocker
: 0.10.13
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-13 13:27 UTC by Jan Schmidt
Modified: 2009-10-13 14:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
a52dec: Fix reference leak on all input buffers in 'dvd mode' (1.27 KB, patch)
2009-10-13 13:28 UTC, Jan Schmidt
committed Details | Review

Description Jan Schmidt 2009-10-13 13:27:23 UTC
In DVD mode, a52dec leaks all input buffers
Comment 1 Jan Schmidt 2009-10-13 13:28:51 UTC
Created attachment 145351 [details] [review]
a52dec: Fix reference leak on all input buffers in 'dvd mode'
Comment 2 Sebastian Dröge (slomo) 2009-10-13 13:56:01 UTC
Review of attachment 145351 [details] [review]:

That patch is correct too of course... how did it happen that nobody noticed this so far?
Comment 3 Jan Schmidt 2009-10-13 13:58:09 UTC
no idea. I guess because everyone has gobs of RAM these days
Comment 4 Jan Schmidt 2009-10-13 14:12:53 UTC
commit 3e81d5f2c8a2af4fd915adb160a2dcb1a3650dc0
Author: Jan Schmidt <thaytan@noraisin.net>
Date:   Tue Oct 13 13:05:32 2009 +0100

    a52dec: Fix reference leak on all input buffers in 'dvd mode'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=598272